final fixes for the first public release

--- a/README
+++ b/README
@@ -56,5 +56,7 @@ INSTALLATION (this is a preliminary description)
 5. Take a look at some of the examples in examples.py ... a more elaborated 
    documentation will follow.
 
+For questions, problem & bug reports, suggestions, or ideas mail 
 
+sitzmann at helix.nih.gov 
  
